--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "TSapp",
-    "slug": "TSapp",
+    "name": "Tchaikovsky School",
+    "slug": "Tchaikovsky-School",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -43,6 +43,19 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "d5cf40cb-1b6a-4f2d-8f40-a92ece96d7c8"
+      }
+    },
+    "owner": "mohammedd",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/d5cf40cb-1b6a-4f2d-8f40-a92ece96d7c8"
     }
   }
 }
