--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@react-three/fiber": "^9.3.0",
     "@shadergradient/react": "^2.3.6",
     "@supabase/supabase-js": "^2.57.4",
+    "@types/date-fns": "^2.5.3",
     "add": "^2.0.6",
-    "expo": "~54.0.10",
+    "date-fns": "^4.1.0",
+    "expo": "~54.0.11",
     "expo-constants": "~18.0.9",
+    "expo-document-picker": "^14.0.7",
     "expo-font": "~14.0.8",
     "expo-gl": "~16.0.7",
     "expo-gl-cpp": "^11.4.0",
@@ -32,22 +35,24 @@
     "expo-image": "~3.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.8",
+    "expo-router": "~6.0.9",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.7",
+    "expo-updates": "~29.0.12",
+    "expo-web-browser": "~15.0.8",
     "pnpm": "^10.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.21.0",
+    "react-native-webview": "^13.15.0",
     "react-native-worklets": "0.5.1",
     "three": "^0.180.0"
   },
